--- a/src/main/resources/templates/biomaterial_information.html
+++ b/src/main/resources/templates/biomaterial_information.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/tables.css}">
 </head>
 <body>
+<div class="wrapper">
 <header>
     <h1>Biomaterial Information</h1>
     <p>Details about collected biomaterials and their current statuses.</p>
@@ -86,5 +87,6 @@
     }
 
 </script>
+</div>
 </body>
 </html>
