--- a/src/main/resources/templates/medical_reports.html
+++ b/src/main/resources/templates/medical_reports.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/tables.css}">
 </head>
 <body>
+<div class="wrapper">
 <header>
     <h1>Medical reports</h1>
 </header>
@@ -34,5 +35,7 @@
 <footer>
     <p align="center">&copy; 2025 HealthCare System. All rights reserved.</p>
 </footer>
+</div>
+
 </body>
 </html>
