--- a/src/main/resources/templates/nurse_dashboard.html
+++ b/src/main/resources/templates/nurse_dashboard.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/tables.css}">
 </head>
 <body>
+<div class="wrapper">
 <header>
     <h1>Expired biomaterials</h1>
     <p>Details about expired biomaterials.</p>
@@ -73,5 +74,6 @@
         }
     }
 </script>
+</div>
 </body>
 </html>
