--- a/src/main/resources/templates/research_registrations.html
+++ b/src/main/resources/templates/research_registrations.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/tables.css}">
 </head>
 <body>
+<div class="wrapper">
 <header>
     <h1>Research registrations</h1>
     <p>Details about research registrations and patients.</p>
@@ -41,6 +42,6 @@
 <footer>
     <p align="center">&copy; 2025 HealthCare System. All rights reserved.</p>
 </footer>
-
+</div>
 </body>
 </html>
