--- a/src/main/resources/templates/biomaterials.html
+++ b/src/main/resources/templates/biomaterials.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/tables.css}">
 </head>
 <body>
+<div class="wrapper">
 <header>
     <h1>Biomaterials</h1>
     <p>Details about collected biomaterials and their current statuses.</p>
@@ -82,5 +83,6 @@
         }
     }
 </script>
+</div>
 </body>
 </html>
