--- a/src/main/resources/templates/candidates_for_vacancy.html
+++ b/src/main/resources/templates/candidates_for_vacancy.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Candidates for Vacancy</title>
-  <link rel="stylesheet" th:href="@{/css/candidates.css}">
+  <link rel="stylesheet" th:href="@{/css/candidates_for_vacancy.css}">
 </head>
 <body>
 <div class="candidates-container">
