--- a/src/main/resources/templates/patient_dashboard.html
+++ b/src/main/resources/templates/patient_dashboard.html
@@ -11,15 +11,27 @@
   <h1>Welcome, <span th:text="${patient.person.name}"></span>!</h1>
 
   <div class="profile-section">
-    <h2>Your Profile</h2>
+    <div class="profile-header">
+        <div class="profile-photo">
+            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="#4B4B4B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="7" r="4"></circle>
+                <path d="M5.5 21a9.5 9.5 0 0 1 13 0"></path>
+            </svg>
+        </div>
+
+        <div class="profile-details">
+        <h2>Your Profile</h2>
     <p><strong>Name:</strong> <span th:text="${patient.person.name}"></span></p>
     <p><strong>Surname:</strong> <span th:text="${patient.person.surname}"></span></p>
     <p><strong>Date of Birth:</strong> <span th:text="${patient.person.birthDate}"></span></p>
     <p><strong>Gender:</strong> <span th:text="${patient.person.gender}"></span></p>
     <p><strong>Contact Info:</strong> <span th:text="${patient.person.contactInfo}"></span></p>
   </div>
+  </div>
+</div>
 
-<!--  <div class="diagnosis-section">-->
+
+  <!--  <div class="diagnosis-section">-->
 <!--    <h2>Your Diagnoses</h2>-->
 <!--    <table>-->
 <!--      <thead>-->
@@ -46,5 +58,6 @@
     </button>
   </div>
 </div>
+
 </body>
 </html>
