--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<div class="wrapper">
 <header>
     <h1>Information about patients</h1>
 </header>
@@ -85,6 +86,6 @@
         }
     }
 </script>
-
+</div>
 </body>
 </html>
