feat: tables with patients to doctors

--- a/src/main/resources/templates/staff_member_dashboard.html
+++ b/src/main/resources/templates/staff_member_dashboard.html
@@ -76,9 +76,16 @@
     </button>
 
     <button th:if="${staffMember.position == 'Treating doctor'}"
+            th:onclick="|window.location.href='@{/patients/showPage}'|">
+      Medical records
+    </button>
+
+    <button th:if="${staffMember.position == 'Geneticist' || staffMember.position == 'Technician'}"
             th:onclick="|window.location.href='@{/patients/show}'|">
       Medical records
     </button>
+
+
   </div>
 </div>
 </body>
